style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
:root {
  --color-light: #cecece;
  --color-dark: #0b1d31;
  --color-black: #161616;
  --rps-color1: #0b1d31;
  --rps-color2: #33c474;
  --rps-color3: #0b1d31;
  --rps-color4: darkgray;
}

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: "Consolas", "Courier";
  letter-spacing: 0.1vw;
}

body {
  background-color: var(--color-black);
  line-height: 6vh;
  /* overflow-x: hidden; */
}

.wrapper {
  width: 100%;
  height: 100vh;
  overflow: hidden;
  position: relative;
}

ul {
  margin-left: 5vw;
  list-style: circle;
}

nav {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  min-height: 8vh;
  background-color: var(--color-dark);
  padding: 3vh;
  line-height: 3vh;
}

.logo {
  position: absolute;
  left: 10px;
  color: var(--color-light);
}

.nav-links {
  display: flex;
  justify-content: space-around;
  color: var(--color-light);
  padding: 6vh 0 6vh 0;
  width: 60%;
}

.nav-links li {
  list-style: none;
}

.nav-links a {
  /* color: var(--color-light); */
  text-decoration: none;
}

.burger {
  display: none;
  cursor: pointer;
}

.burger div {
  background-color: var(--color-light);
  width: 25px;
  height: 3px;
  margin: 5px;
  border-radius: 3px;
  transition: all 0.3s ease;
}

@media screen and (max-width: 760px) {
  body {
    overflow-x: hidden;
  }

  .nav-links {
    /* color: red; */
    background-color: var(--color-dark);
    position: absolute;
    right: 0px;
    height: 92vh;
    top: 8vh;
    flex-direction: column;
    align-items: center;
    width: 100%;
    /* opacity: 100%; */
    transform: translateX(100%);
    transition: transform 0.1s ease-in;
  }
  .nav-links li {
    opacity: 100%;
  }
  .burger {
    display: block;
    cursor: pointer;
  }
}
.nav-active {
  transform: translateX(0%);
  margin-top: 4vh;
  z-index: 10;
}

.navAnim {
  animation-name: navLinkFade;
  animation-duration: 1s;
}

@keyframes navLinkFade {
  from {
    opacity: 0;
    transform: translateX(50px);
  }
  to {
    opacity: 1;
    transform: translateX(0px);
  }
}

/* burger divs animation */

.toggle .line1 {
  transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
  opacity: 0;
}

.toggle .line3 {
  transform: rotate(45deg) translate(-5px, -6px);
}

/* body */

a {
  color: var(--color-light);
  text-decoration-line: underline;
  text-decoration-style: dotted;
  text-underline-offset: 5px;
}

.main {
  margin: 40px;
  color: var(--color-light);
  width: 80%;
}

.title,
.subtitle {
  font-weight: strong;
}

/* ROCK PAPER SCISSORS RPS */

.rps-main {
  /* background-color: var(--rps-color2); */
  font-family: "Consolas", "Courier";
  color: var(--rps-color2);
  font-size: 1.6em;
}

.outer {
  display: flex;
  flex-direction: column;
  position: relative;
  /* background-color: var(--rps-color2); */
  /* margin: 1%; */
  /* padding: 1%; */
}

.button-container {
  display: inherit;
  justify-content: center;
  font-weight: bold;
  padding: 5%;
  padding-bottom: 0px;
  background-color: var(--rps-color1);
}

.button {
  padding: 0.5em;
  font-size: 1.2em;
}

.playbuttonsbox {
  display: inherit;
  justify-content: space-evenly;
  align-items: baseline;
  padding: 2%;
  padding-top: 0px;
  scroll-padding-bottom: 0px;
  background-color: var(--rps-color1);
}

.p1_rpstitle,
.p2_rpstitle,
.p1_score,
.p2_score {
  border: none;
  color: inherit;
  background-color: var(--rps-color1);
  font-family: inherit;
  font-size: inherit;
  width: 100%;
}

.p1_score,
.p2_score {
  font-size: 2em;
  padding: 5%;
}

.p1_playbuttons,
.p2_playbuttons {
  display: inherit;
  flex-direction: column;
  justify-content: center;
  align-items: baseline;
  padding: 5%;
}

/* .onlybtn: wrapper to prevent rps_title click functionality */

.onlybtn {
  padding: 0px;
  margin: 0px;
  width: auto;
}

.p2_playbuttons {
  opacity: 50%;
}

.p1_rpsbutton {
  border: 1px solid var(--rps-color2);
  color: inherit;
  background-color: var(--rps-color1);
  font-family: inherit;
  font-size: inherit;
  width: 100%;
}

.p1_rpsbutton:hover {
  color: var(--rps-color1);
  background-color: var(--rps-color2);
}

.p2_rpsbutton {
  border: 1px solid var(--rps-color2);
  color: inherit;
  background-color: var(--rps-color1);
  font-family: inherit;
  font-size: inherit;
  width: 100%;
}

.results-text-box {
  background-color: var(--rps-color3);
  display: inherit;
  padding: 2%;
  justify-content: center;
  border: 1px solid var(--rps-color1);
}

.reset {
  border: 1px solid var(--rps-color1);
  color: var(--rps-color1);
  background-color: var(--rps-color2);
  font-family: inherit;
  font-size: inherit;
  width: 100%;
}

.flash {
  background-color: var(--rps-color1);
  animation-name: flashing;
  animation-duration: 0.2s;
  animation-fill-mode: forwards;
}

@keyframes flashing {
  0% {
    background-color: var(--rps-color2);
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}

